--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,11 @@
       <version>1.2.47</version>
     </dependency>
 
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>2.9.0</version>
+    </dependency>
 
 
 
